# CMakePackageTest

./: README.md
Bar/: CMakeLists.txt
Bar/src/: Bar.cpp
Foo/: CMakeLists.txt  FooLibConfig.cmake.in
Foo/include/Foo/: Foo.h
Foo/src/: Foo.cpp
SharedGoodies/: CMakeLists.txt  ShGConfig.cmake.in
SharedGoodies/include/Shared/: Goodies.h
SharedGoodies/src/: Goodies.cpp
